# Embedded_Linux

./: README.md
01-DeviceDriver/: Command.txt  FunctionDescriptions.txt
01-DeviceDriver/01_Hello/: .Module.symvers.cmd  .hello.ko.cmd  .hello.mod.cmd  .hello.mod.o.cmd  .hello.o.cmd  .modules.order.cmd  Makefile  hello.c  hello.ko  hello.mod  hello.mod.c
01-DeviceDriver/02_Paramiter/: .Module.symvers.cmd  .modules.order.cmd  .param.ko.cmd  .param.mod.cmd  .param.mod.o.cmd  .param.o.cmd  Makefile  param.c  param.ko  param.mod  param.mod.c
01-DeviceDriver/03_Major/: .Module.symvers.cmd  .major.ko.cmd  .major.mod.cmd  .major.mod.o.cmd  .major.o.cmd  .modules.order.cmd  Makefile  major.c  major.ko  major.mod  major.mod.c
01-DeviceDriver/04_CreateFile/: .Module.symvers.cmd  .file.ko.cmd  .file.mod.cmd  .file.mod.o.cmd  .file.o.cmd  .modules.order.cmd  Makefile  file.c  file.ko  file.mod.c  modules.order
01-DeviceDriver/05_ErrorHandling/: .Module.symvers.cmd  .file.ko.cmd  .file.mod.cmd  .file.mod.o.cmd  .file.o.cmd  .modules.order.cmd  Makefile  file.c  file.ko  file.mod.c  modules.order
01-DeviceDriver/06_DeviceRead/: .Module.symvers.cmd  .file.ko.cmd  .file.mod.cmd  .file.mod.o.cmd  .file.o.cmd  .modules.order.cmd  file.c  file.ko  file.mod.c  modules.order
01-DeviceDriver/07_DeviceWrite/: .Module.symvers.cmd  .file.ko.cmd  .file.mod.cmd  .file.mod.o.cmd  .file.o.cmd  .modules.order.cmd  file.c  file.ko  file.mod.c  modules.order
01-DeviceDriver/08_GPIO/: .Module.symvers.cmd  .file.ko.cmd  (+9 more)
03-Qt/first_Qt/: CMakeLists.txt  main.cpp
04-curl/: main  main.c
(+31 files in other folders)
